Correcting spacing for figcaption
- Replacing ‘margin’ with ‘padding’ because of margin collapse problem
- Changing ‘em’ unit with ‘rem’

--- a/css/2-base.css
+++ b/css/2-base.css
@@ -66,7 +66,7 @@ figcaption {
 	font-size: .8em;
 	line-height: 1.5em;
 	box-sizing: border-box;
-	margin: -1.4em 0 2em 0;
+	padding: -1.4rem 0 2rem 0;
 	color: gray;
 }
 figcaption strong {
